--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="preload" as="image" href="./public/podcasts/1.jpg" fetchpriority="high" />
+    <link rel="preload" as="image" href="./public/podcasts/3.webp" fetchpriority="high" />
+    <link rel="preload" as="image" href="./public/podcasts/5.webp" fetchpriority="high" />
+    <link rel="preload" as="image" href="./public/podcasts/6.jpg" fetchpriority="high" />
     <link rel="icon" type="image/svg+xml" href="./public/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rodnaya Zemlya</title>
